--- a/templates/firstPage.html
+++ b/templates/firstPage.html
@@ -1,6 +1,33 @@
+
 {% extends 'base.html' %}
+{% load static %}
+
+
 
 {% block content1 %}
+     <link rel="stylesheet" href="{% static 'assets/fonts/font-awesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/fonts/ionicons.min.css'   %}">
+    <link rel="stylesheet" href="{% static 'assets/css/Login-Form-Clean-1.css'   %}">
+    <link rel="stylesheet" href="{% static 'assets/css/Login-Form-Clean.css'  %}">
+    <link rel="stylesheet" href="{% static 'assets/css/styles.css'  %}">
 
+
+  <div class="login-clean">
+        <form method="post">
+            <h2 class="sr-only">Login Form</h2>
+            <div class="illustration"><img src="{% static 'assets/img/logo.png' %}"></div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="username" required="" placeholder="Username" maxlength="20" minlength="4">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="email" name="email" required="" placeholder="Email" maxlength="100" minlength="6">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="password" name="password" required="" placeholder="Password" maxlength="20" minlength="6">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary btn-block" type="submit">Create Account</button>
+            </div><a href="{% url 'login' %}" class="forgot">Already got an account? Login here ...</a></form>
+    </div>
 
 {% endblock %}
