--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,8 @@
             <div class="form-group">
                 <button class="btn btn-primary btn-block" type="submit">Log In</button>
             </div>
-                <a href="{}" class="forgot">Forgot your password?</a>
+                <a href="{% url 'forgot' %}" class="forgot">Forgot your password?</a><br>
+             <a href="{% url 'start' %}" class="forgot">Need an account?</a>
         </form>
 
     </div>
