--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/Login-Form-Clean.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
 
-
+<main>
     <div class="login-clean">
         <form method="post">
             {% csrf_token %}
@@ -29,5 +29,5 @@
         </form>
 
     </div>
-
+</main>
 {% endblock %}
