--- a/templates/firstPage.html
+++ b/templates/firstPage.html
@@ -11,13 +11,17 @@
     <link rel="stylesheet" href="{% static 'assets/css/Login-Form-Clean.css'  %}">
     <link rel="stylesheet" href="{% static 'assets/css/styles.css'  %}">
 
-
+<main>
   <div class="login-clean">
+
         <form method="post">
+
+            {% csrf_token %}
             <h2 class="sr-only">Login Form</h2>
             <div class="illustration"><img src="{% static 'assets/img/logo.png' %}"></div>
             <div class="form-group">
                 <input class="form-control" type="text" name="username" required="" placeholder="Username" maxlength="20" minlength="4">
+
             </div>
             <div class="form-group">
                 <input class="form-control" type="email" name="email" required="" placeholder="Email" maxlength="100" minlength="6">
@@ -29,5 +33,5 @@
                 <button class="btn btn-primary btn-block" type="submit">Create Account</button>
             </div><a href="{% url 'login' %}" class="forgot">Already got an account? Login here ...</a></form>
     </div>
-
+</main>
 {% endblock %}
