--- a/templates/nav.html
+++ b/templates/nav.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'addPost' %}">Add Post</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
 
           <!--  <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
