--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -1,9 +1,30 @@
+
 {% extends 'base.html' %}
 
 {% load static %}
 
 {% block content1 %}
+    {% include 'nav.html' %}
+<main>
 
-    <h1>Forgots</h1>
+    <div class="container">
+
+
+        <div class="row justify-content-center">
+
+            <div class="col-6">
+                <h1>{{ title }}</h1>
+            </div>
+
+
+
+        </div>
+
+
+    </div>
+
+</main>
+
+
 
 {% endblock %}
