--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,8 +1,8 @@
 {% load static %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
 
-    <a class="navbar-brand" href="#"><img style='width: 50px;' src="{% static 'assets/img/logo.png' %}"></a>
+    <a class="navbar-brand" href="{% url 'home' %}"><img style='width: 50px;' src="{% static 'assets/img/logo.png' %}"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
