--- a/templates/wall.html
+++ b/templates/wall.html
@@ -9,12 +9,11 @@
 
     <div class="container">
 
+        <div class="row info shadow p-3 mb-1 bg-white rounded">
 
-        <div class="row justify-content-center">
 
-            <div class="col-6">
                 <h1>wall</h1>
-            </div>
+            
 
 
 
