--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -2,6 +2,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block content1 %}
     {% include 'nav.html' %}
@@ -13,7 +14,17 @@
         <div class="row justify-content-center">
 
             <div class="col-6">
-                <h1>{{ title }}</h1>
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <fieldset class="form-group">
+                        <legend class="border-bottom mb-4">Profile Information</legend>
+                        {{ u_form|crispy}}
+                        {{ p_form|crispy}}
+                    </fieldset>
+                    <div class="form-group">
+                        <button class="btn btn-outline-info" type="submit">Update Profile</button>
+                    </div>
+                </form>
             </div>
 
 
