--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,8 +10,11 @@
     <div class="container">
 
         <div class="row info shadow p-3 mb-1 bg-white rounded">
-            <div class="col-4"><img src="#" alt="profile pic" class="profile-pic"></div>
-            <div class="col-4 user-info">description
+            <div class=" col-4"><img src="{{ user.profile.image.url }}" alt="profile pic" class="profile-pic"></div>
+            <div class="col-4 user-info">
+                <h2 class="account-heading">{{ user.username }}</h2>
+                <h2 >{{ user.first_name }}</h2>
+                <p class="text-secondary">{{ user.email }}</p>
                 <a href="{% url 'edit-profile' %}" class="btn btn-outline-info">Edit Profile</a>
             </div>
         </div>
@@ -22,6 +25,8 @@
 -->
 
     </div>
+
+
 
 </main>
 
