--- a/templates/wall.html
+++ b/templates/wall.html
@@ -9,15 +9,13 @@
 
     <div class="container">
 
-        <div class="row info shadow p-3 mb-1 bg-white rounded">
 
 
-                <h1>wall</h1>
             
+{% include 'postsforloop.html' %}
 
 
 
-        </div>
 
 
     </div>
