--- a/templates/edit-profile.html
+++ b/templates/edit-profile.html
@@ -1,8 +1,9 @@
 
 {% extends 'base.html' %}
-
-{% load static %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
+{% load static %}
+
 
 {% block content1 %}
     {% include 'nav.html' %}
