--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,6 +20,10 @@
         </div>
         <div class="row posts shadow p-3 mb-5 bg-white rounded">
 #posts
+
+{% include 'postsforloop.html' %}
+
+
         </div>
         <!--<div class="row justify-content-center">        </div>
 -->
