--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -11,7 +11,13 @@
             <div class="row justify-content-center">
                 <div class="col-6">
                     <div class="content-section">
-                       {{ form }}
+
+                      <form enctype="multipart/form-data" method="post">
+                          {% csrf_token %}
+                       {{ form|crispy }}
+                          <button type = 'submit'>submit</button>
+                      </form>
+
                     </div>
                 </div>
 
