--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
     <div class="container">
 
         <div class="row info shadow p-3 mb-1 bg-white rounded">
-            <div class=" col-4"><img src="{{ user.profile.image.url }}" alt="profile pic" class="profile-pic"></div>
+            <div class=" col-4"><img style="max-width: 150px" src="{{ user.profile.image.url }}" alt="profile pic" class="profile-pic"></div>
             <div class="col-4 user-info">
                 <h2 class="account-heading">{{ user.username }}</h2>
                 <h2 >{{ user.first_name }}</h2>
