--- a/templates/addpost.html
+++ b/templates/addpost.html
@@ -11,6 +11,18 @@
             <div class="row justify-content-center">
                 <div class="col-6">
                     <div class="content-section">
+                        <form method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <fieldset class="form-group">
+                                <legend class="border-bottom mb-4">Profile Information</legend>
+                                {{ form|crispy}}
+                            </fieldset>
+                            <div class="form-group">
+                                <button class="btn btn-outline-info" type="submit">Add post</button>
+                            </div>
+                        </form>
+
+
 
                       <form enctype="multipart/form-data" method="post">
                           {% csrf_token %}
