--- a/templates/nav.html
+++ b/templates/nav.html
@@ -45,8 +45,8 @@
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li>-->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <form method="post" class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2"  type="search" placeholder="Search" aria-label="Search">
             <button style="display: none" type="submit">Search</button>
         </form>
     </div>
