--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     <div class="login-clean">
         <form method="post">
             {% csrf_token %}
-            <h2 class="sr-only">Login Form</h2>
+            <h2 >Login</h2>
 
                 <div class="illustration"><img src="{% static 'assets/img/logo.png' %}"></div>
             <div class="form-group" style="position:relative;">
