forgot urls,views,templates

--- a/templates/accounts/password_reset_sent.html
+++ b/templates/accounts/password_reset_sent.html
@@ -10,12 +10,17 @@
 
 <main>
 <div class="login-clean">
-<h3>Password reset sent</h3>
+    <form action="">
+        <h3>Password reset email sent</h3>
 
 
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
+        <p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
 
-<p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+        <p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+
+
+
+    </form>
 </div>
 </main>
 {% endblock %}
