--- a/templates/accounts/password_reset_done.html
+++ b/templates/accounts/password_reset_done.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="{% static 'assets/css/styles.css' %}">
 
 <main>
+
 <div class="login-clean">
+    <form action="">
 <h3>Password reset complete</h3>
 
 <p>Your password has been set. You may go ahead and log in now.</p>
 
-<a href="{% url 'login' %}">Log in</a>
+<a class="forgot" href="{% url 'login' %}">Log in</a>
+    </form>
 </div>
 </main>
 {% endblock %}
