--- a/static/assets/css/styles.css
+++ b/static/assets/css/styles.css
@@ -480,4 +480,7 @@ grayscale:hover {
   opacity:0.4;
   position:absolute;
 }
-
+.nav{
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,32,1) 67%, rgba(255,0,120,1) 100%);
+}
