--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load crispy_forms_filters %}
 
 {% load static %}
 
@@ -14,12 +15,13 @@
             {% csrf_token %}
             <h2 >Forgot Login Detials</h2>
 
-                <div class="illustration"><img src="{% static 'assets/img/logo.png' %}"></div>
+            <div class="illustration"><img src="{% static 'assets/img/logo.png' %}"></div>
             <h5>Trouble Logging In?</h5>
             <h6>Enter your email and we'll send you a link to get back into your account.</h6>
-            <div class="form-group">
-                <input class="form-control" required type="email" name="email" placeholder="yourname@company.com">
-            </div>
+
+
+            {{form|crispy}}
+
             <div class="form-group">
                 <button class="btn btn-primary btn-block" type="submit">Send Login Link</button>
             </div>
