--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,22 +8,10 @@
 <main>
 
     <div class="container">
+{% include 'user-info.html' %}
 
-        <div class="row info shadow p-3 mb-1 bg-white rounded">
-            <div class=" col-4"><img style="max-width: 150px" src="{{ user.profile.image.url }}" alt="profile pic" class="profile-pic"></div>
-            <div class="col-4 user-info">
-                <h2 class="account-heading">{{ user.username }}</h2>
-                <h2 >{{ user.first_name }}</h2>
-                <p class="text-secondary">{{ user.email }}</p>
-                <a href="{% url 'edit-profile' %}" class="btn btn-outline-info">Edit Profile</a>
-            </div>
-        </div>
         <div class="row posts shadow p-3 mb-5 bg-white rounded">
-#posts
-
-{% include 'postsforloop.html' %}
-
-
+            {% include 'postsforloop.html' %}
         </div>
         <!--<div class="row justify-content-center">        </div>
 -->
