--- a/templates/explore.html
+++ b/templates/explore.html
@@ -17,13 +17,14 @@
 
                         {% else %}
                             <form method='POST'>
+                            {% csrf_token %}
                                 <div class="row  my-2">
 
-                                    <div class="col"><img style="max-width: 50px;height: 50px!important;"src="{{ u1.profile.image.url }}" alt="profile pic"
-                                                          class="profile-pic"></div>
-                                    <div class="col col-8 col-sx-6"><p name="userID" value="{{ u1.pk }}"class="text-secondary">{{ u1.username }}{# {{ u1.first_name }} #} </p></div>
+                                    <div class="col"><img style="max-width: 50px;height: 50px!important;"src="{{ u1.profile.image.url }}" alt="profile pic" class="profile-pic"></div>
+                                    <input name="profileId" value="{{ u1.profile.pk }}" type="hidden">
+                                    <div class="col col-8 col-sx-6"><p  class="text-secondary">{{ u1.username }}{# {{ u1.first_name }} #} </p></div>
 
-                                    <div class="col"><a type="submit" class="btn btn-outline-info">Follow</a></div>
+                                    <div class="col"><button type="submit" class="btn btn-outline-info">Follow</button></div>
 
 
                                 </div>
