made templates for following/followers better

--- a/templates/explore.html
+++ b/templates/explore.html
@@ -13,6 +13,7 @@
                     </div>
                     <hr>
                     {% for u1 in users %}
+{#                        //TODO converto to use the oneUserProfile.html  #}
                         {% if u1 == user %}
 
                         {% else %}
