--- a/templates/postsforloop.html
+++ b/templates/postsforloop.html
@@ -1,20 +1,19 @@
+{# here is a row of all the posts #}
 
-               {% for post in posts %}
 
+{% for post in posts %}
 
- <div class="row info shadow p-3 mb-1 bg-white rounded">
-<div class="">
-{% if post.image %}
-            <img style="width: 400px" src="{{ post.image.url }}">
-{% endif %}
-     <br>
-                    <h6>title:{{ post.title }}</h6>
-                    <h6>by:{{ post.by.user.username }}</h6>
-                    <h6>body: {{ post.body }}</h6>
-                   <small class="text-muted">{{ post.date_posted|date:"F d, y "}}</small>
+<div class="row allimageposts shadow p-3 mb-1 bg-white rounded">
+    <div class="col post shadow p-3 mb-1 bg-white rounded">
 
-                    </div>
-
+            {% if post.image %}
+                <img style="width: 400px" src="{{ post.image.url }}">
+            {% endif %}
+            <br>
+            <h6>title:{{ post.title }}</h6>
+            <h6>by:{{ post.by.user.username }}</h6>
+            <h6>body: {{ post.body }}</h6>
+            <small class="text-muted">{{ post.date_posted|date:"F d, y " }}</small>
+        </div>
 </div>
-
-    {% endfor %}
+{% endfor %}
