--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,10 +1,13 @@
 {% load static %}
 <style>
 
-    .navbar{
-        background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,9,32,1) 67%, rgba(255,0,120,1) 100%);
+    .navbar {
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg,rgba(2, 0, 36, 1)   0%, rgba(121, 9, 32, 1) 67%, rgba(255, 0, 120, 1)100%);
     }
+    .navbar-toggler{
+    background-color: blue;
+   }
 </style>
 <nav class="navbar navbar-expand-sm ">
 
