--- a/templates/explore.html
+++ b/templates/explore.html
@@ -7,29 +7,33 @@
     <main>
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-8 h-100">
+                <div class="col h-100">
                     <div class="row">
                         <h1>{{ title }}</h1>
                     </div>
                     <hr>
                     {% for u1 in users %}
-{#                        //TODO converto to use the oneUserProfile.html  #}
+                        {#                        //TODO converto to use the oneUserProfile.html  #}
                         {% if u1 == user %}
 
                         {% else %}
-                            <form method='POST'>
-                            {% csrf_token %}
-                                <div class="row  my-2">
-
-                                    <div class="col"><img style="max-width: 50px;height: 50px!important;"src="{{ u1.profile.image.url }}" alt="profile pic" class="profile-pic"></div>
-                                    <input name="profileId" value="{{ u1.profile.pk }}" type="hidden">
-                                    <div class="col col-8 col-sx-6"><p  class="text-secondary">{{ u1.username }}{# {{ u1.first_name }} #} </p></div>
-
-                                    <div class="col"><button type="submit" class="btn btn-outline-info">Follow</button></div>
-
-
+                            <div class="row mt-3">
+                                <div class="col">
+                                    <img style="max-width: 50px;height: 50px!important;" src="{{ u1.profile.image.url }}"class="profile-pic">
                                 </div>
-                            </form>
+
+                                <div class="col"><p class="text-secondary">
+                                    {{ u1.username }}{# {{ f1.first_name }} #} </p>
+                                </div>
+
+                                <div class="col">
+                                    <form method='POST'>
+                                        {% csrf_token %}
+                                        <input name="profileId" value="{{ u1.profile.pk }}" type="hidden">
+                                        <button type="submit" class="btn btn-outline-info">Follow</button>
+                                    </form>
+                                </div>
+                            </div>
                         {% endif %}
                     {% endfor %}
 
