--- a/templates/wall.html
+++ b/templates/wall.html
@@ -9,8 +9,35 @@
 
     <div class="container">
 
-
-
+        <style>
+        .btn {
+            position: relative;
+            display: inline-block;
+            border-bottom: 1px dotted black;
+           
+          }
+          
+          .btn .toolTipOptions {
+            visibility: hidden;
+            min-width: 180px;
+            
+            background-color: #007bff;
+            color: #fff;
+            text-align: center;
+            border-radius: 6px;
+            padding: 5px 0;
+          
+            /* Position the tooltip */
+            position: absolute;
+            top: 0px;
+            left: -20px;
+            z-index: 1;
+          }
+          
+          .btn:hover .toolTipOptions {
+            visibility: visible;
+          }
+        </style>
             
 {% include 'postsforloop.html' %}
 
