--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
             position: relative;
             display: inline-block;
             border-bottom: 1px dotted black;
+            background-color: purple;
            
           }
           
@@ -27,7 +28,7 @@
             visibility: hidden;
             min-width: 180px;
             
-            background-color: #007bff;
+            background-color: purple;
             color: #fff;
             text-align: center;
             border-radius: 6px;
