--- a/templates/accounts/password_reset_sent.html
+++ b/templates/accounts/password_reset_sent.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block content1 %}
 
 <link rel="stylesheet" href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}">
