--- a/templates/base.html
+++ b/templates/base.html
@@ -1,53 +1,46 @@
 <!doctype html>
 <html lang="en">
-<head>
+    <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <title>{{ title }}-Instagram Clone!</title>
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-
-
-
-
+   
     <style>
-        .btn {
-            position: relative;
-            display: inline-block;
-            border-bottom: 1px dotted black;
-            background-color: purple;
-           
-          }
-          
-          .btn .toolTipOptions {
-            visibility: hidden;
-            min-width: 180px;
-            
-            background-color: purple;
-            color: #fff;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 0;
-          
-            /* Position the tooltip */
-            position: absolute;
-            top: 0px;
-            left: -20px;
-            z-index: 1;
-          }
-          
-          .btn:hover .toolTipOptions {
-            visibility: visible;
-          }
-        </style>
-
-
-<style>
+    .btn {
+        position: relative;
+        display: inline-block;
+        border-bottom: 1px dotted black;
+        background-color: purple;
+        
+        }
+        
+        .btn .toolTipOptions {
+        visibility: hidden;
+        min-width: 180px;
+        
+        background-color: purple;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        
+        /* Position the tooltip */
+        position: absolute;
+        top: 0px;
+        left: -20px;
+        z-index: 1;
+        }
+        
+        .btn:hover .toolTipOptions {
+        visibility: visible;
+        }
+    </style>
+    <style>
     .option {
         display: inline;
         font-size: 1.5rem;
@@ -72,55 +65,53 @@
         content:'❤';
 
     }
-</style>
+    </style>
 
 
-</head>
+    </head>
 
-<body>
+    <body>
 
 
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-    {% block content1 %}
-    {% endblock %}
+        {% if messages %}
+            <ul class="messages">
+                {% for message in messages %}
+                    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+            {% block content1 %}
+            {% endblock %}
 
-{% include 'footer.html' %}
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        {% include 'footer.html' %}
 
-        
-<script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+     
 
-    $('.option').click(function () {
-        emojiid = $(this).find('.emojiid').val()
-        sendthis = { 'csrfmiddlewaretoken': document.getElementsByName('csrfmiddlewaretoken')[0].value, 'postId': $(this).find('.postid').val(), 'emoji': emojiid }
-        $.post('{% url "like" %}', sendthis)
-        
-        var index = $(this).parent().parent().parent().find('.cuttentOption').attr('class').indexOf(`${emojiid}`)
-        
-        if(index>-1){
-            $(this).parent().parent().parent().find('.cuttentOption').removeClass('emoji-').removeClass('emoji-1').removeClass('emoji-2').removeClass('emoji-3').removeClass('emoji-4')
-            $(this).parent().parent().parent().find('.cuttentOption').addClass(`emoji-`)
-            location.reload(true)
-        }else{
-            $(this).parent().parent().parent().find('.cuttentOption').removeClass('emoji-').removeClass('emoji-1').removeClass('emoji-2').removeClass('emoji-3').removeClass('emoji-4')
-        
-            $(this).parent().parent().parent().find('.cuttentOption').addClass(`emoji-${emojiid}`)
-            location.reload(true)
-        }
-        
-       
-    })
-</script>
-</body>
+        <script>
+
+            $('.option').click(function () {
+                emojiid = $(this).find('.emojiid').val()
+                sendthis = { 'csrfmiddlewaretoken': document.getElementsByName('csrfmiddlewaretoken')[0].value, 'postId': $(this).find('.postid').val(), 'emoji': emojiid }
+                $.post('{% url "like" %}', sendthis)
+                
+                var index = $(this).parent().parent().parent().find('.cuttentOption').attr('class').indexOf(`${emojiid}`)
+                
+                if(index>-1){
+                    $(this).parent().parent().parent().find('.cuttentOption').removeClass('emoji-').removeClass('emoji-1').removeClass('emoji-2').removeClass('emoji-3').removeClass('emoji-4')
+                    $(this).parent().parent().parent().find('.cuttentOption').addClass(`emoji-`)
+                    location.reload(true)
+                }else{
+                    $(this).parent().parent().parent().find('.cuttentOption').removeClass('emoji-').removeClass('emoji-1').removeClass('emoji-2').removeClass('emoji-3').removeClass('emoji-4')
+                
+                    $(this).parent().parent().parent().find('.cuttentOption').addClass(`emoji-${emojiid}`)
+                    location.reload(true)
+                }
+                
+            
+            })
+        </script>
+    </body>
 </html>
